# ShExJSG

./: AUTHORS  ChangeLog  Pipfile  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yaml  pypi-publish.yaml
ShExJSG/: SchemaWithContext.py  ShExC.py  ShExJ.jsg  ShExJ.py  __init__.py  shex_schema.py
notebooks/: example.ipynb
scripts/: update_shexj_python.sh
tests/: __init__.py  test_biolink_model.py  test_graphshex.py  test_shexc.py  test_shexj.py  test_valueExpr.py
tests/data/: graph_shex.json
tests/data/input/: biolink-model.json  list.json  shortand.json
tests/data/output/: biolink-model.shex  list.shex  meta.shex  shortand.shex
tests/test_issues/: test_issue_1.py  test_issue_6.py  test_issue_8.py  test_namespaces.py
tests/utils/: memlogger.py
