[metadata]
name = ShExJSG
url = https://github.com/hsolbrig/ShExJSG
license = CC0 1.0 Universal
author = Harold Solbrig
author_email = solbrig@jhu.edu
summary = ShExJSG - Astract Syntax Tree for the ShEx 2.0 language
python-requires = 3
classifier = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Software Development :: Compilers
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords =
    shex
    jsg
    rdf

[files]
packages =
    ShExJSG

[bdist_wheel]
universal = 1
